--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,9 @@
     "strict": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "paths": {
+      "@common/*": ["./src/common/*"]
+    }
   }
 }
