--- a/package.json
+++ b/package.json
@@ -4,13 +4,25 @@
   "main": "index.js",
   "author": "Gabriel <gabriel.houth@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "yarn tsx watch src/main/server.ts"
+  },
+  "dependencies": {
+    "@prisma/client": "^5.0.0",
+    "express": "^4.18.2",
+    "tsx": "^3.12.7"
+  },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/node": "^20.4.4",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.8.0",
     "prettier": "3.0.0",
+    "prisma": "^5.0.0",
+    "supertest": "^6.3.3",
     "typescript": "^5.1.6",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.33.0"
