--- a/package.json
+++ b/package.json
@@ -5,12 +5,18 @@
   "author": "Gabriel <gabriel.houth@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "yarn tsx watch src/main/server.ts"
+    "dev": "yarn tsx watch src/main/server.ts",
+    "prisma:generate": "npx prisma generate",
+    "migration:dev": "dotenv -e .env npx prisma migrate dev && dotenv -e .env.test npx prisma migrate dev",
+    "test:unit": "yarn vitest run unit",
+    "test:unit:watch": "yarn vitest watch unit",
+    "test:integration": "dotenv -e .env.test -- yarn vitest run integration",
+    "test:integration:watch": "dotenv -e .env.test -- yarn vitest watch integration"
   },
   "dependencies": {
     "@prisma/client": "^5.0.0",
-    "express": "^4.18.2",
-    "tsx": "^3.12.7"
+    "dotenv-cli": "^7.2.1",
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
@@ -23,6 +29,7 @@
     "prettier": "3.0.0",
     "prisma": "^5.0.0",
     "supertest": "^6.3.3",
+    "tsx": "^3.12.7",
     "typescript": "^5.1.6",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.33.0"
